<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/upn_veteran_jawa_timur"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="19sp" />
    <FrameLayout
        android:layout_marginTop="100dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:background="#FFAAEA61"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gedung_fik_2"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_komputer"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="55dp"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelas"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ruang_seminar"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#F2F2F2"
                    android:text="@string/selengkapnya"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>
    </FrameLayout>

</RelativeLayout>